--- a/index.html
+++ b/index.html
@@ -143,31 +143,31 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Especialista en natación, reconocido por su capacidad para motivar y adaptar sus clases a las necesidades individuales, logrando un aprendizaje efectivo y disfrutable.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
                                 <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/profesor3.webp" alt="Fotografia del docente de Natación">
                             </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Sofía Quispe</h4>
-                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Ballet</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Larry Campojo</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Con una gran experiencia en la natación, destaca por su enfoque profesional y su habilidad para crear un ambiente positivo que impulsa el progreso de sus estudiantes.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.webp" alt="Fotografia del docente de Teatro">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/usuario.webp" alt="Fotografia del docente de Teatro">
                             </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
-                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Próximamente</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor(a) de Teatro</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Próximamente, contaremos con un(a) profesor(a) de teatro para desarrollar la creatividad y expresión de nuestros estudiantes. ¡Pronto más información!</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.webp" alt="Fotografia del docente de Teatro">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/usuario.webp" alt="Fotografia del docente de Teatro">
                             </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
-                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Próximamente</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor(a) de Ballet</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Muy pronto tendremos un(a) profesor(a) de ballet para enseñar disciplina y elegancia a nuestros estudiantes. ¡Estate atento(a)!</p>
                         </div>
                     </div>
 
@@ -186,17 +186,17 @@
                     <span id="text_costo_nat" class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">NATACIÓN</span>
                     <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Ver Detalles</span>
                 </a>
-                <a href="/pages/teatro.html" target="_blank" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                <a id="alert_tea" href="javascript:void(0)" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
                     <div id="box_costo_tea" class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-verde_catolica hover:cursor-pointer"></div>
                     <img class="w-full h-full object-cover rounded-lg" src="/images/tc_teatro.webp" alt="Imagen de teatro">
                     <span id="text_costo_tea" class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">TEATRO</span>
-                    <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Ver Detalles</span>
+                    <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Próximamente</span>
                 </a>
-                <a href="/pages/ballet.html" target="_blank" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                <a id="alert_bal" href="javascript:void(0)" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
                     <div id="box_costo_bal" class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-amarillo_catolica hover:cursor-pointer"></div>
                     <img class="w-full h-full object-cover rounded-lg" src="/images/tc_ballet.webp" alt="Imagen de ballet">
                     <span id="text_costo_bal" class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">BALLET</span>
-                    <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Ver Detalles</span>
+                    <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Próximamente</span>
                 </a>
             </div>
         </section>
@@ -401,7 +401,7 @@
     </footer>
 
     <div id="modal_natacion" class="fixed 320px:top-0 320px:left-0 bg-black 320px:w-full 320px:h-full 320px:z-50 overflow-y-auto hidden">
-        <img id="close_modal_nat" class="320px:absolute" src="/icons/equis_blanco.png" alt="Icono de cerrar">
+        <img id="close_modal_nat" class="320px:absolute hover:cursor-pointer" src="/icons/equis_blanco.png" alt="Icono de cerrar">
         <div class="row-gallery">
             <div class="col-gallery">
                 <img class="w-full" src="/images/gal_nat2.webp" alt="">
@@ -430,7 +430,7 @@
         </div>
     </div>
     <div id="modal_teatro" class="fixed 320px:top-0 320px:left-0 bg-black 320px:w-full 320px:h-full 320px:z-50 overflow-y-auto hidden">
-        <img id="close_modal_tea" class="320px:w-14 320px:absolute 320px:top-4 320px:right-4" src="/icons/equis_blanco.png" alt="Icono de cerrar">
+        <img id="close_modal_tea" class="320px:absolute hover:cursor-pointer" src="/icons/equis_blanco.png" alt="Icono de cerrar">
         <div class="row-gallery">
             <div class="col-gallery">
                 <img class="w-full" src="/images/gal_nat2.webp" alt="">
@@ -459,7 +459,7 @@
         </div>
     </div>
     <div id="modal_ballet" class="fixed 320px:top-0 320px:left-0 bg-black 320px:w-full 320px:h-full 320px:z-50 overflow-y-auto hidden">
-        <img id="close_modal_bal" class="320px:w-14 320px:absolute 320px:top-4 320px:right-4" src="/icons/equis_blanco.png" alt="Icono de cerrar">
+        <img id="close_modal_bal" class="320px:absolute hover:cursor-pointer" src="/icons/equis_blanco.png" alt="Icono de cerrar">
         <div class="row-gallery">
             <div class="col-gallery">
                 <img class="w-full" src="/images/gal_nat2.webp" alt="">
@@ -501,5 +501,6 @@
     <script src="/js/animated.js"></script>
     <script src="/js/modal.js"></script>
     <script src="/js/costos.js"></script>
+    <script src="/js/alerta.js"></script>
 </body>
 </html>
