recursos agregados a la pagina

--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
                     </a>
                 </ul>
                 <ul class="absolute right-0 bottom-16 z-50 flex w-full justify-center gap-4">
-                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
-                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
-                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
+                    <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
+                    <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
+                    <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
+                    <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/tik-tok-negro.png" alt="Icono de Tik Tok"></li></a>
                 </ul>
             </nav>
         </div>
         <ul class="320px:hidden absolute right-8 top-0 z-50 h-full 820px:flex flex-col justify-center gap-6">
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-black"><img class="1260px:w-6 540px:w-5" src="/icons/tik-tok-blanco.png" alt="Icono de Instagram"></li></a>
+            <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
+            <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
+            <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
+            <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-black"><img class="1260px:w-6 540px:w-5" src="/icons/tik-tok-blanco.png" alt="Icono de Instagram"></li></a>
         </ul>
     </header>
 
@@ -141,7 +142,7 @@
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
                                 <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/prof_natacion_2.webp" alt="Fotografia del docente de Natación">
                             </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Juan Martinez</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Especialista en natación, reconocido por su capacidad para motivar y adaptar sus clases a las necesidades individuales, logrando un aprendizaje efectivo y disfrutable.</p>
                         </div>
@@ -369,31 +370,29 @@
                     <p class="font-bree_regular 1260px:mt-7">Calle W Mz. Q2, 7mo. Etapa, Urb. Sto. Domingo - Carabayllo</p>
                 </div>
                 <div class="320px:w-72 320px:mx-auto 320px:text-center">
-                    <span class="320px:font-bree_bold 320px:text-lg">Informes</span>
-                    <p class="font-bree_regular 1260px:mt-7">+51 999 999 999</p>
-                    <p class="font-bree_regular 1260px:mt-3">+51 999 999 999</p>
-                </div>
-                <div class="320px:w-72 320px:mx-auto 320px:text-center">
-                    <span class="320px:font-bree_bold 320px:text-lg">Correo</span>
-                    <p class="font-bree_regular 1260px:mt-7">informes@clubcatolica.edu.pe</p>
+                    <span class="320px:font-bree_bold 320px:text-lg">Redes Sociales</span>
                     <ul class="font-bree_regular 320px:flex 320px:flex-col 320px:items-center 320px:gap-3 320px:mt-7 1260px:mt-3">
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://wa.me/997470362" target="_blank">
                             <img class="320px:w-5" src="icons/whatsapp.png" alt="">
                             <span>Whatsapp</span>
                         </a></li>
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank">
                             <img class="320px:w-5" src="icons/facebook.png" alt="">
                             <span>Facebook</span>
                         </a></li>
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank">
                             <img class="320px:w-5" src="icons/instagram.png" alt="">
                             <span>Instagram</span>
                         </a></li>
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank">
                             <img class="320px:w-5" src="icons/tik-tok-blanco.png" alt="">
                             <span>Tik Tok</span>
                         </a></li>
                     </ul>
+                </div>
+                <div class="320px:w-72 320px:mx-auto 320px:text-center">
+                    <span class="320px:font-bree_bold 320px:text-lg">Correo</span>
+                    <p class="font-bree_regular 1260px:mt-7">informes@clubcatolica.edu.pe</p>
                 </div>
             </div>
         </div>
@@ -489,7 +488,7 @@
     </div>
 
     <div class="fixed 320px:w-14 1400px:w-16 320px:right-4 1400px:right-8 1500px:w-20 1400px:bottom-6 320px:bottom-5 320px:z-50">
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/997470362" target="_blank" rel="noopener noreferrer">
             <img class="animate__animated animate__pulse animate__infinite" src="/icons/wsp_original.png" alt="Icono de Whatsapp">
         </a>
     </div>
