--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -82,17 +82,18 @@
                     </a>
                 </ul>
                 <ul class="absolute right-0 bottom-16 z-50 flex w-full justify-center gap-4">
-                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
-                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
-                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
+                    <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
+                    <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
+                    <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
+                    <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/tik-tok-negro.png" alt="Icono de Tik Tok"></li></a>
                 </ul>
             </nav>
         </div>
         <ul class="320px:hidden absolute right-8 top-0 z-50 h-full 820px:flex flex-col justify-center gap-6">
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-black"><img class="1260px:w-6 540px:w-5" src="/icons/tik-tok-blanco.png" alt="Icono de Instagram"></li></a>
+            <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
+            <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
+            <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
+            <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-black"><img class="1260px:w-6 540px:w-5" src="/icons/tik-tok-blanco.png" alt="Icono de Instagram"></li></a>
         </ul>
     </header>
 
@@ -466,36 +467,40 @@
                     <p class="font-bree_regular 1260px:mt-7">Calle W Mz. Q2, 7mo. Etapa, Urb. Sto. Domingo - Carabayllo</p>
                 </div>
                 <div class="320px:w-72 320px:mx-auto 320px:text-center">
-                    <span class="320px:font-bree_bold 320px:text-lg">Informes</span>
-                    <p class="font-bree_regular 1260px:mt-7">+51 999 999 999</p>
-                    <p class="font-bree_regular 1260px:mt-3">+51 999 999 999</p>
-                </div>
-                <div class="320px:w-72 320px:mx-auto 320px:text-center">
-                    <span class="320px:font-bree_bold 320px:text-lg">Correo</span>
-                    <p class="font-bree_regular 1260px:mt-7">informes@clubcatolica.edu.pe</p>
+                    <span class="320px:font-bree_bold 320px:text-lg">Redes Sociales</span>
                     <ul class="font-bree_regular 320px:flex 320px:flex-col 320px:items-center 320px:gap-3 320px:mt-7 1260px:mt-3">
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://wa.me/997470362" target="_blank">
                             <img class="320px:w-5" src="/icons/whatsapp.png" alt="">
                             <span>Whatsapp</span>
                         </a></li>
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank">
                             <img class="320px:w-5" src="/icons/facebook.png" alt="">
                             <span>Facebook</span>
                         </a></li>
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank">
                             <img class="320px:w-5" src="/icons/instagram.png" alt="">
                             <span>Instagram</span>
                         </a></li>
-                        <li><a class="320px:flex 320px:gap-1" href="#">
+                        <li><a class="320px:flex 320px:gap-1" href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank">
                             <img class="320px:w-5" src="/icons/tik-tok-blanco.png" alt="">
                             <span>Tik Tok</span>
                         </a></li>
                     </ul>
                 </div>
+                <div class="320px:w-72 320px:mx-auto 320px:text-center">
+                    <span class="320px:font-bree_bold 320px:text-lg">Correo</span>
+                    <p class="font-bree_regular 1260px:mt-7">informes@clubcatolica.edu.pe</p>
+                </div>
             </div>
         </div>
         <p class="font-bree_regular 320px:mt-10 320px:text-center 320px:text-sm">&copy2024 Club La Católica - Todos los derechos reservados</p>
     </footer>
+
+    <div class="fixed 320px:w-14 1400px:w-16 320px:right-4 1400px:right-8 1500px:w-20 1400px:bottom-6 320px:bottom-5 320px:z-50">
+        <a href="https://wa.me/997470362" target="_blank" rel="noopener noreferrer">
+            <img class="animate__animated animate__pulse animate__infinite" src="/icons/wsp_original.png" alt="Icono de Whatsapp">
+        </a>
+    </div>
 
     <script src="/js/nav.js"></script>
 </body>
