cambios en los datos de los profesores

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
                         <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-azul_catolica font-bree_bold">NATACIÓN</h1>
                         <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">¡Sumérgete en la diversión!</h2>
-                        <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p> -->
                         <button class="bg-azul_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
                     </div>
                 </div>
@@ -33,7 +32,6 @@
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
                         <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-amarillo_catolica">BALLET</h1>
                         <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">Haz de cada movimiento una obra maestra</h2>
-                        <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el ballet, perfecciona cada paso y técnica para transformar cada movimiento en una expresión artística única y elegante, elevando tu danza a un nivel superior.</p> -->
                         <button class="bg-amarillo_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
                     </div>
                 </div>
@@ -43,7 +41,6 @@
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
                         <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-verde_catolica">TEATRO</h1>
                         <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">Haz del escenario tu lugar de expresión</h2>
-                        <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p> -->
                         <button class="bg-verde_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
                     </div>
                 </div>
@@ -123,11 +120,11 @@
         <section id="nosotros" class="320px:my-10 1100px:my-16  1260px:gap-3 1100px:mx-auto">
             <div class="1100px:w-3/5 1100px:mx-auto 320px:mx-5">
                 <h2 class="320px:text-3xl 1100px:text-4xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-3">Nosotros</h2>
-                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700px:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido a nuestra academia La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
+                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700px:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido al Club Artístico y Deportivo "La Católica"! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
             </div>
             <div class="320px:my-5 1100px:my-0 1100px:mt-10 1360px:mt-20 bg-azul_catolica 320px:px-4 540px:px-12 700px:px-4 1500px:px-7 320px:py-9">
                 <h3 class="320px:font-bree_bold text-amarillo_catolica 320px:mb-3 1100px:text-3xl 1400px:text-4xl 1100px:text-center 320px:text-center 320px:text-28px 900px:text-3xl">Nuestros Docentes</h3>
-                <p class="320px:font-bree_regular text-white 320px:text-sm 320px:mb-6 1100px:text-15px 320px:text-center 1600px:text-lg 1100px:w-3/5 1100px:mx-auto">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico emocionante!</p>
+                <p class="320px:font-bree_regular text-white 320px:text-sm 320px:mb-6 1100px:text-15px 320px:text-center 1600px:text-lg 1100px:w-3/5 1100px:mx-auto">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico y deportivo emocionante!</p>
                 <div id="slider_docentes" class="swiper bg-white rounded-lg">
                     <div class="swiper-wrapper 320px:my-5">
                         <div class="swiper-slide">
@@ -136,7 +133,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Su energía y creatividad convierten cada clase en una experiencia dinámica y divertida.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -144,7 +141,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Juan Martinez</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Especialista en natación, reconocido por su capacidad para motivar y adaptar sus clases a las necesidades individuales, logrando un aprendizaje efectivo y disfrutable.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Destaca por su técnica precisa y su habilidad para transmitir confianza en el agua.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -152,15 +149,15 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Larry Campojo</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Con una gran experiencia en la natación, destaca por su enfoque profesional y su habilidad para crear un ambiente positivo que impulsa el progreso de sus estudiantes.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Con su enfoque motivador, Larry ayuda a perfeccionar cada movimiento en la piscina.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
                                 <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/usuario.webp" alt="Fotografia del docente de Teatro">
                             </div>
-                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Próximamente</h4>
-                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor(a) de Teatro</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Próximamente, contaremos con un(a) profesor(a) de teatro para desarrollar la creatividad y expresión de nuestros estudiantes. ¡Pronto más información!</p>
+                            <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Diego Palacios</h4>
+                            <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Con una pasión vibrante por las artes escénicas, Diego inspira a sus alumnos a explorar su creatividad y expresarse con confianza sobre el escenario.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -168,7 +165,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Sandra Tello</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Ballet</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Muy pronto tendremos un(a) profesor(a) de ballet para enseñar disciplina y elegancia a nuestros estudiantes. ¡Estate atento(a)!</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Sandra guía con gracia y dedicación, ayudando a sus alumnos a descubrir la belleza y disciplina del ballet.</p>
                         </div>
                     </div>
 
