--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="sliders" class="swiper 1360px:h-screen 940px:h-723px 320px:h-550px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/sliders//slider_catolica_1.webp" alt="Slider relacionado a la natación">
+                    <img class="w-full h-full object-cover" src="/images/sliders/slider_catolica_1.webp" alt="Slider relacionado a la natación">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
                         <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-azul_catolica font-bree_bold">NATACIÓN</h1>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/sliders//ballet-slider.webp" alt="Slider relacionado al ballet">
+                    <img class="w-full h-full object-cover" src="/images/sliders/ballet-slider.webp" alt="Slider relacionado al ballet">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
                         <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-amarillo_catolica">BALLET</h1>
@@ -400,28 +400,28 @@
         <img id="close_modal_nat" class="320px:absolute hover:cursor-pointer" src="/icons/equis_blanco.png" alt="Icono de cerrar">
         <div class="row-gallery">
             <div class="col-gallery">
-                <img class="w-full" src="/images/gal_nat2.webp" alt="">
-                <img class="w-full" src="/images/gal_nat3.webp" alt="">
-                <img class="w-full" src="/images/gal_nat4.webp" alt="">
-                <img class="w-full" src="/images/gal_nat5.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat2.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat3.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat4.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat5.webp" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="/images/gal_nat6.webp" alt="">
-                <img class="w-full" src="/images/gal_nat7.webp" alt="">
-                <img class="w-full" src="/images/gal_nat.webp" alt="">
-                <img class="w-full" src="/images/gal_nat2.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat6.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat7.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat2.webp" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="/images/gal_nat3.webp" alt="">
-                <img class="w-full" src="/images/gal_nat.webp" alt="">
-                <img class="w-full" src="/images/gal_nat2.webp" alt="">
-                <img class="w-full" src="/images/gal_nat3.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat3.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat2.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat3.webp" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="/images/gal_nat4.webp" alt="">
-                <img class="w-full" src="/images/gal_nat5.webp" alt="">
-                <img class="w-full" src="/images/gal_nat6.webp" alt="">
-                <img class="w-full" src="/images/gal_nat7.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat4.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat5.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat6.webp" alt="">
+                <img class="w-full" src="/images/galeria_natacion/gal_nat7.webp" alt="">
             </div>
         </div>
     </div>
