--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header id="header" class="relative">
-        <div id="sliders" class="swiper 320px:h-450px 700px:h-550px relative">
+        <div id="sliders" class="swiper 320px:h-450px 700:h-550px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/sliders/slider_catolica_1.webp" alt="Slider relacionado a la natación">
@@ -456,10 +456,10 @@
     </main>
 
     <footer id="contacto" class="bg-verde_catolica 320px:text-white 320px:pt-9 320px:pb-2 320px:mt-14">
-        <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 700px:w-11/12 1360px:w-1300px">
-            <div class="320px:mx-auto 320px:w-72 700px:w-500px 1000px:w-56 1360px:w-72">
-                <p class="font-bree_bold 320px:text-xl 320px:text-center 700px:text-start">Acércate y vive la experiencia en nuestro club</p>
-                <iframe class="320px:w-full 320px:h-56 320px:mx-auto 320px:mt-4 700px:h-72 1000px:h-48" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15617.540478915627!2d-77.03406175134279!3d-11.878248975003087!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105d0b8c515cd2f%3A0x72d08cfea0969124!2sCat%C3%B3lica%20School!5e0!3m2!1ses-419!2spe!4v1730249860109!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 700:w-11/12 1360px:w-1300px">
+            <div class="320px:mx-auto 320px:w-72 700:w-500px 1000px:w-56 1360px:w-72">
+                <p class="font-bree_bold 320px:text-xl 320px:text-center 700:text-start">Acércate y vive la experiencia en nuestro club</p>
+                <iframe class="320px:w-full 320px:h-56 320px:mx-auto 320px:mt-4 700:h-72 1000px:h-48" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15617.540478915627!2d-77.03406175134279!3d-11.878248975003087!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105d0b8c515cd2f%3A0x72d08cfea0969124!2sCat%C3%B3lica%20School!5e0!3m2!1ses-419!2spe!4v1730249860109!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 1000px:w-96 1260px:w-850px 1260px:flex-nowrap">
                 <div class="320px:w-72 320px:mx-auto 320px:text-center">
