se comprimierons las imagenes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="sliders" class="swiper 1360px:h-screen 940px:h-723px 320px:h-550px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/sliders/fondo_natación_prueba.webp" alt="Slider relacionado a la natación">
+                    <img class="w-full h-full object-cover" src="/images/sliders/slider_catolica_1.webp" alt="Slider relacionado a la natación">
                     <div class="absolute top-0 left-0 bg-azul_catolica z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
                         <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 font-bree_bold">NATACIÓN</h1>
